# airplay2-rs

./: .gitignore  AIRPLAY_2_SPEC.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  JITTER.md  README.md
PTP analysis/: APPLE_PTP_TLVS.md  PAIR_AP_GROUP_PLAN.md  PTP.md  SUMMARY_APPLE_TLVS.md  parse_apple_tlvs.py
crates/airplay-audio/: Cargo.toml
crates/airplay-audio/src/: buffer.rs  cipher.rs  decoder.rs  encoder.rs  eq.rs  lib.rs  live_decoder.rs  rtp.rs  streamer.rs  traits.rs
crates/airplay-audio/tests/: live_capture_pipeline.rs
crates/airplay-bluetooth/: Cargo.toml
crates/airplay-bluetooth/src/: a2dp.rs  adapter.rs  alsa_capture.rs  device.rs  discovery.rs  error.rs  lib.rs  pairing.rs  setup.rs  source.rs
crates/airplay-bluetooth/tests/: resampler_test.rs
crates/airplay-client/: Cargo.toml
crates/airplay-client/examples/: debug_setup.rs  play_audio.rs  test_gptp.rs  test_group.rs
crates/airplay-client/src/: builder.rs  client.rs  connection.rs  events.rs  group.rs  lib.rs  playback.rs  raop_connection.rs  stats.rs
crates/airplay-core/: Cargo.toml
crates/airplay-core/src/: codec.rs  device.rs  error.rs  features.rs  lib.rs  stream.rs
crates/airplay-crypto/: Cargo.toml
crates/airplay-crypto/benches/: crypto_benches.rs
crates/airplay-crypto/src/: aes.rs  chacha.rs  curve25519.rs  digest.rs  ed25519.rs  hkdf.rs  keys.rs  lib.rs  rsa.rs  srp.rs  tlv.rs
crates/airplay-discovery/: Cargo.toml
crates/airplay-discovery/examples/: debug_devices.rs
crates/airplay-discovery/src/: browser.rs  lib.rs  parser.rs  traits.rs
crates/airplay-pairing/: Cargo.toml
crates/airplay-pairing/examples/: pair_with_device.rs
crates/airplay-pairing/src/: channel.rs  controller.rs  fairplay.rs  lib.rs  pair_setup.rs  pair_verify.rs  session.rs  traits.rs
crates/airplay-resampler/: Cargo.toml
crates/airplay-resampler/src/: lib.rs
crates/airplay-rtsp/: Cargo.toml
crates/airplay-rtsp/src/: connection.rs  lib.rs  plist_codec.rs  raop_session.rs  request.rs  response.rs  sdp.rs  session.rs  traits.rs
crates/airplay-timing/: Cargo.toml
crates/airplay-timing/src/: clock.rs  lib.rs  ntp.rs  ptp.rs  traits.rs
crates/airplay-tui/: Cargo.toml
crates/airplay-tui/src/: action.rs  app.rs  audio_info.rs  bluetooth_helper.rs  file_browser.rs  lib.rs  main.rs  state.rs  usb_audio.rs
crates/airplay-tui/src/ui/: bluetooth.rs  browser.rs  devices.rs  group.rs  help.rs  mod.rs  player.rs  usb_audio.rs
docs/: AUDIO_RESAMPLING.md  BLUETOOTH_ALSA_EVALUATION.md  BLUETOOTH_PIPEWIRE_SETUP.md
src/: main.rs
utils/: airplay_pairing_diag.py  setup-deps.sh
