[package]
name = "airplay2-rs"
version = "0.1.0"
authors = ["Lucas McGartland <luke.mcgartland@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17", features = ["full"]}
zeroconf = "0.10.3"
