[workspace]
resolver = "2"
members = [
    "crates/airplay-core",
    "crates/airplay-discovery",
    "crates/airplay-crypto",
    "crates/airplay-pairing",
    "crates/airplay-rtsp",
    "crates/airplay-audio",
    "crates/airplay-timing",
    "crates/airplay-client",
    "crates/airplay-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/example/airplay2-sender"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Networking
mdns-sd = "0.11"
socket2 = "0.5"

# Cryptography
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
curve25519-dalek = { version = "4.1", features = ["digest"] }
chacha20poly1305 = "0.10"
aes = "0.8"
cbc = "0.1"
ctr = "0.9"
sha2 = "0.10"
hkdf = "0.12"
num-bigint = { version = "0.4", features = ["rand"] }

# Serialization
plist = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Audio
symphonia = { version = "0.5", features = ["all"] }
alac-encoder = "0.3"
fdk-aac = "0.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
mockall = "0.12"
proptest = "1.4"
test-case = "3.3"
tokio-test = "0.4"
