[package]
name = "airplay2-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/example/airplay2-sender"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17", features = ["full"]}
zeroconf = "0.10.3"
