[package]
name = "airplay-client"
version.workspace = true
edition.workspace = true
description = "High-level AirPlay 2 sender client"

[dependencies]
airplay-core = { path = "../airplay-core" }
airplay-discovery = { path = "../airplay-discovery" }
airplay-crypto = { path = "../airplay-crypto" }
airplay-pairing = { path = "../airplay-pairing" }
airplay-rtsp = { path = "../airplay-rtsp" }
airplay-audio = { path = "../airplay-audio" }
airplay-timing = { path = "../airplay-timing" }
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
rand.workspace = true
serde.workspace = true
serde_json = "1.0"
base64 = "0.22"

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
test-case.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt"] }
