[package]
name = "airplay-pairing"
version.workspace = true
edition.workspace = true
description = "HomeKit and FairPlay authentication for AirPlay 2"

[dependencies]
airplay-core = { path = "../airplay-core" }
airplay-crypto = { path = "../airplay-crypto" }
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
sha2.workspace = true
plist.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
test-case.workspace = true
rand.workspace = true
num-bigint.workspace = true
sha2.workspace = true
airplay-discovery = { path = "../airplay-discovery" }
serde.workspace = true
serde_json = "1.0"
tempfile = "3.10"
x25519-dalek.workspace = true
aes.workspace = true
ctr.workspace = true
chacha20poly1305.workspace = true
