[package]
name = "airplay-resampler"
version.workspace = true
edition.workspace = true
description = "High-quality audio resampling for AirPlay 2"

[dependencies]
airplay-core = { path = "../airplay-core" }
rubato = "0.15"
fastrand = "2.0"
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
